# Microservice-Template

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fc45db558460_initial_mysql_db.py
app/config/: config.py  db.toml
app/controller/: user_controller.py
app/model/: user_model.py
app/utils/: toml_parser.py
tests/: tests_user_creation_endpoint.py
